# fraud_detection

./: mlflow.db  pyproject.toml
docs/: eda_findings.md
notebooks/: 01_data_cleaning_sql copy.ipynb  02_data_cleaning.ipynb  02_raw_data_cleaning.ipynb  02_time_analysis.ipynb  03_feature_eng.ipynb  0_dataunderstanding.ipynb
sql/: 01_eda_with_sql.sql  categorical_pattern.sql  combined_risk.sql  email_domain_pattern.sql  identity_pattern.sql  time_pattern_analysis.sql
