[project]
name = "fraud_detection"
version = "0.1.0"
description = "fraud_detection on IEEE-CIS dataset"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pyarrow>=18.0",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "cryptography>=43.0",
    "python-dotenv>=1.0",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "mlflow>=2.17",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
